@@ -8,5 +8,6 @@ extern int dfsch__number_eqv_p(dfsch_object_t* a, dfsch_object_t* b);
 extern void dfsch__hash_native_register(dfsch_ctx_t *ctx);
 extern void dfsch__promise_native_register(dfsch_ctx_t *ctx);
 extern void dfsch__number_native_register(dfsch_ctx_t *ctx);
+extern void dfsch__string_native_register(dfsch_ctx_t *ctx);
 
 #endif
