@@ -1,3 +1,8 @@
+2006-02-07  Ales Hakl  <ales at hakl dot net>
+
+	* src/strings.c (dfsch_string_list_append): Generic string append
+	function.
+
 2006-01-29  Ales Hakl  <ales at hakl dot net>
 
 	* src/repl.c (main): indented option help a bit
